lilv (0.24.7) unstable;

  * Implement state:freePath feature

 -- David Robillard <d@drobilla.net>  Sun, 08 Dec 2019 12:30:32 +0000

lilv (0.24.6) stable;

  * Add more strict error detection when storing plugin state properties
  * Add option to override LV2_PATH in applications
  * Don't print errors when saving state if correct links already exist
  * Fix GCC8 warnings
  * Fix creating directories across drives on Windows
  * Fix issues with loading state with saved files from the model
  * Fix memory errors and Python 3.4+ compatibility in Python bindings
  * Fix unit tests on Windows
  * Make Python bindings more Pythonic

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:39:37 +0000

lilv (0.24.4) stable;

  * Don't attempt to load remote or non-Turtle files
  * Fix saving state when broken links are encountered
  * Gracefully handle plugins with missing binary URIs
  * Install Python bindings when configured without tests (thanks Clement
    Skau)
  * Remove use of deprecated readdir_r
  * lv2apply: Activate plugin before running
  * lv2apply: Use default values when they are not nan
  * lv2bench: Improve support for plugins with sequence ports
  * lv2bench: Support running a single plugin given on the command line

 -- David Robillard <d@drobilla.net>  Sun, 22 Jul 2018 18:42:00 +0000

lilv (0.24.2) stable;

  * Fix comparison of restored states with paths
  * Fix saving state to paths that contain URI delimiters (#, ?, etc)

 -- David Robillard <d@drobilla.net>  Wed, 04 Jan 2017 16:48:08 +0000

lilv (0.24.0) stable;

  * Add LILV_URI_ATOM_PORT and LILV_URI_CV_PORT defines
  * Add lilv_state_set_metadata() for adding state banks/comments/etc (based
    on patch from Hanspeter Portner)
  * Add lilv_world_get_symbol()
  * Add lv2apply utility for applying plugins to audio files
  * Add new hand-crafted Pythonic bindings with full test coverage
  * Check lv2:binary predicate for UIs
  * Do not instantiate plugin when data fails to parse