@@ -1,8 +1,9 @@
 lilv (0.24.7) unstable;
 
   * Implement state:freePath feature
+  * Fix deleting state bundles loaded from the model
 
- -- David Robillard <d@drobilla.net>  Sun, 08 Dec 2019 12:30:32 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 18 Jan 2020 14:28:23 +0000
 
 lilv (0.24.6) stable;
 
